--- a/index.html
+++ b/index.html
@@ -1,19 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockey-A9C5</title>
+    <!-- tailwind and daysi ui link starting point -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.1/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- taildwind and daysi ui ending point -->
+    <!----------------------------------------->
+    <!-- google font link staring point -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <!-- google font link ending point  -->
+    <!------------------------------------>
+    <!-- style section staring point -->
+    <style>
+        .manrope {
+            font-family: 'Manrope', sans-serif;
+        }
+    </style>
+    <!-- style section ending point -->
 </head>
-<body>
-    <header>
 
+<body>
+
+    <!-- header section starting point -->
+    <header>
+        <!-- nav section starting point -->
+        <nav>
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a class="text-[#FF4240] text-[16px] manrope font-bold">Home</a></li>
+
+                            <li><a class="text-[#424247] text-[16px] manrope font-bold">About</a></li>
+
+                            <li><a class="text-[#424247] text-[16px] manrope font-normal">Pages</a></li>
+
+                            <li><a class="text-[#424247] text-[16px] manrope font-normal">Blog</a></li>
+
+                            <li><a class="text-[#424247] text-[16px] manrope font-normal">Contact</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-[36px] text-[#131318] manrope font-extrabold">Hockey <span
+                            class="text-[36] font-extrabold text-[#FF4240] manrope">’</span>s</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="text-[#FF4240] text-[16px] manrope font-bold">Home</a></li>
+
+                        <li><a class="text-[#424247] text-[16px] manrope font-bold">About</a></li>
+
+                        <li><a class="text-[#424247] text-[16px] manrope font-normal">Pages</a></li>
+
+                        <li><a class="text-[#424247] text-[16px] manrope font-normal">Blog</a></li>
+
+                        <li><a class="text-[#424247] text-[16px] manrope font-normal">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <button class="btn btn-error text-[20px] text-[#FFF] font-bold manrope">Get Ticket</button>
+                </div>
+            </div>
+        </nav>
+        <!-- nav section ending point -->
+        <!------------------------------>
+        <!--banner section staring point-->
+        <div class="carousel w-full h-[550px] mt-[58px]">
+            <div id="slide1" class="carousel-item relative w-full">
+                <img src="./Images/1.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+                <img src="./Images/2.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+                <img src="./Images/3.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+                <img src="./Images/4.png" class="w-full" />
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+        <!-- banner section ending point -->
     </header>
+    <!-- headar section ending pont  -->
+    <!--------------------------------->
+    <!-- main section starting point -->
     <main>
-        
+        <!-- club section staring point -->
+        <section class="mt-[100px]">
+            <hr class="mb-[32px] w-full h-[1px] ">
+            <div>
+                <h1 class="text-[36px] manrope text-center font-extrabold text-[#131318]">Professional Hockeys Club</h1>
+                <p class="text-[16px] text-[#13131899]
+                 manrope font-medium text-center mt-[24px]">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <hr class="mb-[32px] w-full h-[1px] mt-[32px]">
+            <div class="text-center grid grid-cols-4">
+                <div>
+                    <div class="radial-progress text-red-600" style="--value:87;" role="progressbar">87%</div>
+                    <h1 class="text-[#131318] text-[20px] font-semibold manrope mt-[24px]">Prayer Facility</h1>
+                    <p class="text-[16px] text-[#13131899] font-normal manrope mt-[16px]">Amet consectetur. Condimentum
+                        <br> dignissim adipiscing .
+                    </p>
+                </div>
+
+                <div>
+                    <div class="radial-progress text-green-600" style="--value:95;" role="progressbar">95%</div>
+                    <h1 class="text-[#131318] text-[20px] font-semibold manrope mt-[24px]">Experienced Coach</h1>
+                    <p class="text-[16px] text-[#13131899] font-normal manrope mt-[16px]">Amet consectetur. Condimentum
+                        <br> dignissim adipiscing .
+                    </p>
+                </div>
+
+                <div>
+                    <div class="radial-progress text-yellow-400" style="--value:90;" role="progressbar">90%</div>
+                    <h1 class="text-[#131318] text-[20px] font-semibold manrope mt-[24px]">Senior Player</h1>
+                    <p class="text-[16px] text-[#13131899] font-normal manrope mt-[16px]">Amet consectetur. Condimentum
+                        <br> dignissim adipiscing .
+                    </p>
+                </div>
+
+                <div>
+                    <div class="radial-progress text-sky-400 " style="--value:80;" role="progressbar">80%</div>
+                    <h1 class="text-[#131318] text-[20px] font-semibold manrope mt-[24px]">Training Ground</h1>
+                    <p class="text-[16px] text-[#13131899] font-normal manrope mt-[16px]">Amet consectetur. Condimentum
+                        <br> dignissim adipiscing .
+                    </p>
+
+                </div>
+
+
+            </div>
+        </section>
+        <!-- club section ending point -->
+        <!------------------------------->
+        <!-- program section staring point-->
+        <section>
+            <hr class="mt-[100px] w-full h-[1px]">
+
+            <h1 class="text-[#131318] text-[36px] font-extrabold manrope text-center mt-[32px]">Program Sections</h1>
+            <p class="text-[16px] font-medium manrope text-[#13131899] text-center mt-[24px]">Dit amet consectetur. Condimentum
+                dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+                <hr class="mt[32px]">
+        </section>
+        <!-- program section ending point-->
     </main>
+    <!-- main section ending point  -->
+    <!-------------------------------->
+    <!--footer section starnig point-->
     <footer>
 
     </footer>
+    <!-- footer section ending point -->
 </body>
+
 </html>
