added ladding section

--- a/index.html
+++ b/index.html
@@ -169,11 +169,26 @@
             <hr class="mt-[100px] w-full h-[1px]">
 
             <h1 class="text-[#131318] text-[36px] font-extrabold manrope text-center mt-[32px]">Program Sections</h1>
-            <p class="text-[16px] font-medium manrope text-[#13131899] text-center mt-[24px]">Dit amet consectetur. Condimentum
+            <p class="text-[16px] font-medium manrope text-[#13131899] text-center mt-[24px]">Dit amet consectetur.
+                Condimentum
                 dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
-                <hr class="mt[32px]">
+            <hr class="mt-[32px]">
+            <!-- register section starting point -->
+            <div class="text-center mt-3">
+                <span class="loading loading-spinner loading-lg ">Low Internet</span>
+            </div>
+            
+            <!-- ragister section ending point -->
         </section>
         <!-- program section ending point-->
+        <!--------------------------------->
+        <!-- products section starting point -->
+        <section class="mt-[32px]">
+            <hr class="">
+            <h1 class="text-[#131318] text-[36px] manrope text-center font-extrabold mt-[32px]">Our New Products</h1>
+            <p class="mt-[24px] text-[16px] manrope text-[#13131899] font-medium text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+        </section>
+        <!-- products section endnig point -->
     </main>
     <!-- main section ending point  -->
     <!-------------------------------->
