--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -236,7 +236,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -272,7 +272,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -287,7 +287,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -323,7 +323,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -338,7 +338,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -374,7 +374,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -389,7 +389,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -425,7 +425,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -440,7 +440,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -476,7 +476,7 @@
                                     d="m9.653 16.915-.005-.003-.019-.01a20.759 20.759 0 0 1-1.162-.682 22.045 22.045 0 0 1-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 0 1 8-2.828A4.5 4.5 0 0 1 18 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 0 1-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 0 1-.69.001l-.002-.001Z" />
                             </svg>
 
-                         <p class="text-[#13131880]">200</p>
+                            <p class="text-[#13131880]">200</p>
 
                         </div>
                         <h2 class="card-title text-[20px] font-extrabold text-[#131318]">World Cup Flags Football</h2>
@@ -491,7 +491,7 @@
                                     d="M1 1.75A.75.75 0 0 1 1.75 1h1.628a1.75 1.75 0 0 1 1.734 1.51L5.18 3a65.25 65.25 0 0 1 13.36 1.412.75.75 0 0 1 .58.875 48.645 48.645 0 0 1-1.618 6.2.75.75 0 0 1-.712.513H6a2.503 2.503 0 0 0-2.292 1.5H17.25a.75.75 0 0 1 0 1.5H2.76a.75.75 0 0 1-.748-.807 4.002 4.002 0 0 1 2.716-3.486L3.626 2.716a.25.25 0 0 0-.248-.216H1.75A.75.75 0 0 1 1 1.75ZM6 17.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0ZM15.5 19a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z" />
                             </svg>
                             <p class="text-[#13131880] text-[16px] manrope font-medium">Delivery Fee : Free</p>
-                             <!--  -->
+                            <!--  -->
                         </div>
                         <div class="card-actions justify-end">
                         </div>
@@ -506,9 +506,74 @@
         <!-- clients section starting point -->
         <section>
             <hr class="w-[full] h-[1px] mt-[100px]">
-            
+            <h1 class="text-[#131318] text-[36px] manrope font-extrabold text-center mt-[32px]">Clients Question</h1>
+
+            <p class="text-[16px] text-center font-medium text-[#13131899] mt-[24px]">Dit amet consectetur. Condimentum
+                dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            <hr class="mt-[32px] h-[1px]">
+            <div class="">
+                <!-- div 1 -->
+                <div class="mt-[48px] grid grid-cols-2 gap-10">
+                    <img class="w-[441px] h-[470px]" src="./Images/11.png" alt="">
+                    <div>
+                        <div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Our Equipment
+                                </div>
+                                <div class="collapse-content">
+                                    <p class="">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim <br> sagittis turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-medium">
+                                    Click to open this one and close others
+                                </div>
+                                <div class="collapse-content">
+                                    <p>hello</p>
+                                </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-medium">
+                                    Click to open this one and close others
+                                </div>
+                                <div class="collapse-content">
+                                    <p>hello</p>
+                                </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-medium">
+                                    Click to open this one and close others
+                                </div>
+                                <div class="collapse-content">
+                                    <p>hello</p>
+                                </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-medium">
+                                    Click to open this one and close others
+                                </div>
+                                <div class="collapse-content">
+                                    <p>hello</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-medium">
+                                    Click to open this one and close others
+                                </div>
+                                <div class="collapse-content">
+                                    <p>hello</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
         <!-- clinets section ending point -->
+        <!---------------------------------->
+        <!--  -->
     </main>
     <!-- main section ending point  -->
     <!-------------------------------->
