--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@
             <hr class="mt-[32px] h-[1px]">
             <div class="">
                 <!-- div 1 -->
-                <div class="mt-[48px] grid grid-cols-2 gap-10">
-                    <img class="w-[441px] h-[470px]" src="./Images/11.png" alt="">
+                <div class="mt-[48px] flex gap-10 justify-center">
+                    <img class="w-[437px] h-[430px]" src="./Images/11.png" alt="">
                     <div>
                         <div>
                             <div class="collapse collapse-plus bg-base-200">
@@ -528,32 +528,32 @@
                             </div>
                             <div class="collapse collapse-plus bg-base-200">
                                 <input type="radio" name="my-accordion-3" />
-                                <div class="collapse-title text-xl font-medium">
-                                    Click to open this one and close others
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Hockey Training
                                 </div>
                                 <div class="collapse-content">
                                     <p>hello</p>
                                 </div>
                             <div class="collapse collapse-plus bg-base-200">
                                 <input type="radio" name="my-accordion-3" />
-                                <div class="collapse-title text-xl font-medium">
-                                    Click to open this one and close others
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Private Lessons
                                 </div>
                                 <div class="collapse-content">
                                     <p>hello</p>
                                 </div>
                             <div class="collapse collapse-plus bg-base-200">
                                 <input type="radio" name="my-accordion-3" />
-                                <div class="collapse-title text-xl font-medium">
-                                    Click to open this one and close others
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Ski Touring
                                 </div>
                                 <div class="collapse-content">
                                     <p>hello</p>
                                 </div>
                             <div class="collapse collapse-plus bg-base-200">
                                 <input type="radio" name="my-accordion-3" />
-                                <div class="collapse-title text-xl font-medium">
-                                    Click to open this one and close others
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Booking
                                 </div>
                                 <div class="collapse-content">
                                     <p>hello</p>
@@ -561,8 +561,8 @@
                             </div>
                             <div class="collapse collapse-plus bg-base-200">
                                 <input type="radio" name="my-accordion-3" />
-                                <div class="collapse-title text-xl font-medium">
-                                    Click to open this one and close others
+                                <div class="collapse-title text-xl font-medium text-[#131318]">
+                                    Pricings
                                 </div>
                                 <div class="collapse-content">
                                     <p>hello</p>
